# BrickShooter

./: .gitignore  README.md
Broker/: Broker.dfm  Broker.dof  Broker.dpr  Broker.pas  main.dcu  main.~dfm  main.~pas
deploy/: README.md  brickshooter.service  config.env.example
docs/: DEPLOYMENT.md  DESIGN.md  EFFECTS_PLAN.md  IDEAS.md  IDEAS_SUMMARY.md  MIGRATION_PLAN.md  TODO.md
v1/: DESIGN.md  TODO.md  (+4 more)
v2/: pyproject.toml  requirements.txt
v2/backend/: __main__.py  app.py  game_log.py  logging_config.py  scoreboard.py
v2/backend/adapters/: codec.py  snapshot.py  web_input.py  web_presenter.py
v2/domain/: brick.py  constants.py  events.py  game.py  history.py  ports.py
v2/domain/rules/: crosser.py  matching.py  movement.py  refill.py  shot.py
v2/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
v2/frontend/src/: a11y.ts  main.ts  scoreboard.ts
v2/frontend/src/audio/: sfx.ts
v2/frontend/src/scenes/: GridScene.ts  colors.ts  event_dispatch.ts  grid_render.ts  skin.ts
v2/frontend/src/transport/: events.ts  ws_client.ts
v2/frontend/tests/: event_dispatch.test.ts  events.test.ts  grid_render.test.ts  scoreboard.test.ts  ws_client.test.ts
v2/tests/: test_app.py  test_brick.py  test_codec.py  test_constants.py  test_events.py  test_game.py  test_game_log.py  test_history.py  test_integration_full_round.py  test_ports.py  test_rules_crosser.py  test_rules_matching.py  test_rules_movement.py  test_rules_refill.py  test_rules_shot.py  test_scoreboard.py  test_snapshot.py  test_web_input.py  test_web_presenter.py
(+1 files in other folders)
